--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.ignoreWords": ["jsonify"]
+  "cSpell.ignoreWords": [
+    "dotenv",
+    "jsonify",
+    "sqlalchemy",
+    "wtforms"
+  ]
 }
